app/global.css
@import "tailwindcss";
@import "fumadocs-ui/css/neutral.css";
@import "fumadocs-ui/css/preset.css";
@import "./tw-animate.css";
@import "shadcn/tailwind.css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-border-primary: var(--border-primary);
  --color-surface-elevated: var(--surface-elevated);
  --color-gray-50: #fafafa;
  --color-gray-100: #f5f5f5;
  --color-gray-200: #e5e5e5;
  --color-gray-300: #d4d4d4;
  --color-gray-400: #a3a3a3;
  --color-gray-500: #737373;
  --color-gray-600: #525252;
  --color-gray-700: #404040;
  --color-gray-800: #262626;
  --color-gray-900: #171717;
  --color-gray-950: #0a0a0a;
  /* shadow/sm */
  --shadow-sm:
    0 2px 4px -2px rgba(0, 0, 0, 0.06), 0 4px 4px -2px rgba(0, 0, 0, 0.06);
  --shadow-modal:
    0 -4px 12px 4px rgba(0, 0, 0, 0.04), 0 4px 12px -4px rgba(0, 0, 0, 0.06);
}

:root {
  --radius: 0.625rem; 
  --background: oklch(1 0 0); /* #ffffff */
  --foreground: oklch(0.145 0 0); /* #252525 */
  --card: oklch(1 0 0); /* #ffffff */
  --card-foreground: oklch(0.145 0 0); /* #252525 */
  --popover: oklch(1 0 0); /* #ffffff */
  --popover-foreground: oklch(0.145 0 0); /* #252525 */
  --primary: oklch(0.205 0 0); /* #343434 */
  --primary-foreground: oklch(0.985 0 0); /* #fbfbfb */
  --secondary: oklch(0.97 0 0); /* #f7f7f7 */
  --secondary-foreground: oklch(0.205 0 0); /* #343434 */
  --muted: oklch(0.97 0 0); /* #f7f7f7 */
  --muted-foreground: oklch(0.556 0 0); /* #8e8e8e */
  --accent: oklch(0.97 0 0); /* #f7f7f7 */
  --accent-foreground: oklch(0.205 0 0); /* #343434 */
  --destructive: oklch(0.577 0.245 27.325); /* #dc2626 */
  --border: oklch(0.922 0 0); /* #ebebeb */
  --input: oklch(0.922 0 0); /* #ebebeb */
  --ring: oklch(0.708 0 0); /* #b5b5b5 */
  --chart-1: oklch(0.646 0.222 41.116); /* #f59e0b */
  --chart-2: oklch(0.6 0.118 184.704); /* #3b82f6 */
  --chart-3: oklch(0.398 0.07 227.392); /* #6366f1 */
  --chart-4: oklch(0.828 0.189 84.429); /* #10b981 */
  --chart-5: oklch(0.769 0.188 70.08); /* #f59e0b */
  --sidebar: oklch(0.985 0 0); /* #fbfbfb */
  --sidebar-foreground: oklch(0.145 0 0); /* #252525 */
  --sidebar-primary: oklch(0.205 0 0); /* #343434 */
  --sidebar-primary-foreground: oklch(0.985 0 0); /* #fbfbfb */
  --sidebar-accent: oklch(0.97 0 0); /* #f7f7f7 */
  --sidebar-accent-foreground: oklch(0.205 0 0); /* #343434 */
  --sidebar-border: oklch(0.922 0 0); /* #ebebeb */
  --sidebar-ring: oklch(0.708 0 0); /* #b5b5b5 */
  --border-primary: #e5e5e5;
  --surface-elevated: #fff;
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
  --border-primary: oklch(1 0 0 / 10%);
  --surface-elevated: oklch(0.269 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-white text-foreground dark:bg-gray-900;
  }
}

code {
  counter-reset: line;
}

code .line::before {
  counter-increment: line;
  content: counter(line);
  display: inline-block;
  width: 1rem;
  margin-right: 1.25rem;
  text-align: right;
  color: #737373;
  padding-left: 0;
  font-size: 14px;
}

code .line {
  /* border: 1px solid; */
  padding-left: 0px !important;
}

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

